added the new comparison image. many changes in the text

--- a/v445-puppis.tex
+++ b/v445-puppis.tex
@@ -139,13 +139,9 @@
  simplest explanation involves some type of helium-star donor, but a
  white dwarf accreting and burning hydrogen could also build up a
  thick helium layer that ignites, and a veneer of hydrogen might
- escape notice.  Unfortunately, currently, there only is
- pre-explosion photometry (which implies a surprisingly high
- luminosity).  Post explosion, the binary has remained obscured by
- the nova shell, as shown dramatically by NACO images taken in
- 2005--2007.  The shell expands, though, and we propose to revisit
- Nova Puppis to determine whether the binary has reappeared and
- spectroscopy has become possible.}
+ escape notice.  In the first part of the project we uncovered 
+ ( with successful NACO P90 imaging) that the star, enshrouded by dust for years, is finally visible. 
+ We propose to scrutinize this object with NACO spectroscopy and study the current state of the system.}
 
 %---- BOX 3 ------------------------------------------------------------
 %
@@ -197,7 +193,7 @@
 % If the field is left blank a default normal, non-TOO run is assumed.
 % If a TOO run is specified please make sure that you fill in the TOO page.
 
-\ObservingRun{A}{92}{NACO}{2h}{any}{n}{0.8}{THN}{s}{}
+\ObservingRun{A}{92}{NACO}{4h}{any}{n}{0.8}{THN}{s}{}
 
 % Proprietary time requested.
 % Valid values: % 0, 1, 2, 6, 12
@@ -229,10 +225,7 @@
 % This macro is optional and can be commented out.
 % It is also NOT checked at the pdfLaTeX compilation.
 
-\SpecialRemarks{In box 13, we ask for the observations to be scheduled
- as two 1-hour blocks separated by at least a week, so that the
- results of the first block can inform the settings for the
- second (see box 8B).}
+\SpecialRemarks{}
 
 
 %---- BOX 6 ------------------------------------------------------------
@@ -308,8 +301,7 @@
 
 \ScientificRationale{
 %
- {\em This is a resubmission of a previous proposal, with comments
-   addressed.}
+ {\em This is the follow-up to the successful P90 proposal ??????}
 
  \smallskip{\bf Bizarre lives of dead stars: white dwarfs in binaries.}
  While in isolation white dwarfs do little but cool steadily, in
@@ -337,7 +329,7 @@
  non-degenerate companion in some supernovae (e.g., SN 2011fe, Nugent
  et al.\ 2011, Nature 480, 344; Bloom et al.\ 2012, ApJ 744, L17) and
  some supernova remnants (Schaefer \& Pagnotta, 2012, Nature, 481,
- 164; Kerzendorf et al.\ 2012, ApJ, submitted) as well as a lack of
+ 164; Kerzendorf et al.  2012, ApJ, Kerzendorf et al. 2013, subm. ) as well as a lack of
  suitable single-degenerate progenitor systems from both observations
  (Di Stefano 2010, ApJ 712, 728; Gilfanov \& Bogd\'an 2010, Nature
  463, 924) and population synthesis (Ruiter et al.\ 2009, ApJ 699,
@@ -388,16 +380,19 @@
  thick equatorial waist (Woudt et al. 2009, ApJ 706, 738; also, ESO
  press release 0943).
 
- The pretty nebula also poses a problem, however, in that the
- equatorial waist obscures the binary.  As a result, the only clues
- to its nature we currently have, are that pre-explosion V445 Pup had
- $V\simeq14.5$ and $V-K\simeq3.0$, and that it was variable at the
+ The pretty nebula also posed a problem, however, in that the
+ equatorial waist obscures the binary. However, new NACO imaging revealed that the dust had "settled" and
+ the star is visible again: In 2012, we obtained K-Band images that show that the star is visible with a magnitude of $\textrm{K}=15.5$ (for comparison see Figure~\ref{fig:v445img}) .
+ 
+Pre-explosion V445 Pup had
+ $V\simeq14.5$ and $V-K\simeq3.0$. In addition, it was variable at the
  10\% level.  At the distance of $8.2\pm0.5\,$kpc inferred from the
  expansion of the nebula by Woudt et al., and correcting for
  interstellar reddening $E_{B-V}\simeq0.5$, this corresponds to a
  luminosity of $L\simeq2000\,L_\odot$ and a color $(V-K)_0\simeq1.6$
  (the object may be more luminous and bluer if there is substantial
- circumstellar reddening; Woudt et al., ibid).
+ circumstellar reddening; Woudt et al., ibid). With these information we conclude that currently there's a extinction of $A_\textrm{K} = 4$.
+ 
 
  The inferred luminosity is very high for a cataclysmic variable, and
  the system's nature thus remains unclear: is the companion very
@@ -418,51 +413,26 @@
  against those sources as SN Ia progenitors (that there is no
  evidence for hydrogen in SN Ia spectra).  If instead, the donor is a
  helium star or giant, the mass-loss and mass accretion estimates
- will allow a first empirical evalulation of the plausibility of such
+ will allow a first empirical evaluation of the plausibility of such
  systems as SN Ia progenitors (and would suggest that regular novae
  do loose more mass than they accrete, since no earlier helium novae
  were observed).
 %
 }
 
-\ImmediateObjective{We propose to use 2 hours of NACO AO imaging to
- determine whether V445 Pup has become visible again, and thus
- whether, from follow-up spectroscopy, it will be possible to
+\ImmediateObjective{We propose to use 4 hours of NACO AO spectropscopy to
  ascertain its nature: Is the binary hydrogen or helium rich? How
  large and luminous is the companion? How large is the accretion
  disk? Did the system host a supersoft source?
 
- Specifically, we propose to search for a point source in the nova
- remnant.  In the previous NACO observations by Woudt et al.\ (March
- 2005 to March 2007), the binary was hidden from view by dust
- obscuration.  With an artificial star experiment, we find a limit
- $K>17$ (see figure).  Given that the source was detected in 2MASS
- (pre-explosion) at $K=11.5$, the implied obscuration in early 2007
- is $A_K>5.5$.  For constant expansion, the dust column density and
+In our previous observation run we detected stars magnitude to $K\approx15.5$. 
+For constant expansion, the dust column density and
  hence the extinction scale as $\rho R\propto R^{-2}\propto t^{-2}$,
- and thus in early 2013 it should have been reduced by a factor
- $\sim\!3.5$, resulting in $A_K>1.6$.  One derives a similar limit
- from the fact that in early 2009, the source still was faint
- ($K=14.1$; Woudt et al.), with much of the emission likely still
- from the nebula (hence, $A_K>3$ in early 2009, implying $A_K>1.4$ in
- early 2013).  Given this, the counterpart could in principle be as
- bright as $K\simeq13$ in early 2013.  (Of course, it can also be
- almost arbitrarily faint; our purpose is to check whether it has
- become observable!)
+ and thus in late 2013/early 2014 it should be reduced to $K\approx15.3$.
+ 
+ 
+ We propose two OBs with 0.7 h on target, to get a spectrum with the necessary quality to obtain the aforementioned science goals.
 
- To obtain a homogenous dataset, we propose to use the same
- NAOS/CONICA setup used by Woudt et al. We propose two OBs with 0.6 h
- on target, so we can detect a counterpart down to $K\simeq18.1$,
- about a magnitude fainter than possible in the observations by Woudt
- et al.  At this level, we will know whether spectroscopy of the
- source is possible now, whether it will become possible in the next
- few years, or whether we should revisit the source with imaging in
- $\ga\!5$ years.
-
- {\em Note on scheduling:} we ask for the the OBs to be separated by
- at least a week, so that we can check the first image and, if the
- source has become bright, use the second OB for a classification
- spectrum.
 %
 }
 %
@@ -475,13 +445,9 @@
 % if printed in black and white. Figures must be in PDF or JPEG format.
 % MakePicture and MakeCaption are optional macros and can be commented out.
 
-\MakePicture{pup2007_artstar.pdf}{angle=0,width=0.8\hsize}
+\MakePicture{v445pup_2007vs2012_cut.pdf}{angle=0,width=1.0\textwidth}
 \MakeCaption{Fig.~1: NACO observations taken March 2007 by Woudt et
- al., with artificial stars added (using a scaled version of nearby
- stars).  The artificial star is barely visible at $K=17.21$, and we
- infer a conservative limit of $K>17$.  Early 2013, dust extinction
- should have reduced by a factor~3.5 and the binary could have become
- as bright as $K\simeq13$.}
+ al. (on the left) and Our observations taken in December 2012 (on the right). The binary is now visible with $K\approx15.5$.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% THE PAGE OF TECHNICAL JUSTIFICATIONS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -496,15 +462,9 @@
 \WhyLunarPhase{No constraints, since the observations are taken in the NIR.}  
 
 \WhyNights{%
- We estimate the required time empirically, using the data taken
- previously with the same instrument by Woudt et al.\ (2009, ApJ 706,
- 738).  As seen in the figure, there was no central object visible in
- the NACO observations in 2007.  Using an artificial star experiment,
- we determined that a source with magnitude $K_{\rm s}=17$ would be
- visible.  We wish to obtain a detection or limit at a slightly
- fainter magnitude, so that we know we can take follow-up
- classification spectroscopy, or to know how long to wait.
-
+ To measure the Hydrogen/Helium emission lines as well as stellar parameters we need a spectrum with a S/N$\approx20$. 
+ 
+ We suggest 
  Thus, we propose to use the same setup as that used by Woudt et al.\
  (which has the additional benefit that it will be easier to use the
  images for possible studies of the nebula's evolution): detector
@@ -588,10 +548,7 @@ logical choice.}
 % (http://archive.eso.org)? If yes, explain the need for new data.
 % This macro is NOT checked at the pdfLaTeX compilation.
 
-\RequestedDataRemark{Data of V445 Puppis were taken with the same
- setup in 2005--2007.  We are interested to see the time evolution of
- this object, in particular to determine whether the central sources
- is becoming visible, and thus we require new observations.}
+\RequestedDataRemark{Data for V445 Puppis exists, but only now the central star is visible to take a spectrum.}
 
 %
 %---- BOX 10b -- ESO GTO/Public Survey Programme Duplications---------
@@ -635,8 +592,11 @@ Remnant,'' ApJ 701, 1655.
 \smallskip\\
 Kerzendorf, W.E., Schmidt, B.P., Laird, J.B., Podsiadlowski, P.,
 Bessell, M.S., 2012, ``Hunting for the progenitor of SN 1006: High
-resolution spectroscopic search with the FLAMES instrument,'' ApJ,
-submitted 
+resolution spectroscopic search with the FLAMES instrument,'' ApJ,  759, 2012
+\smallskip\\
+Kerzendorf, Wolfgang E.; Yong, David; Schmidt, Brian P.; Simon, Joshua D.; Jeffery, C. Simon; Anderson, Jay; Podsiadlowski, Philipp; Gal-Yam, Avishay; Silverman, Jeffrey M.; Filippenko, Alexei V.; Nomoto, Ken'ichi; Murphy, Simon J.; Bessell, Michael S.; Venn, Kim A.; Foley, Ryan J.  ``A High-Resolution Spectroscopic Search for the Remaining Donor for Tycho's Supernova'', Apj, submitted
+
+
 }
 
 
