small changes by me. push back

--- a/v445-puppis.tex
+++ b/v445-puppis.tex
@@ -427,7 +427,7 @@
 
  Having foreseen the possibility of being so lucky, we had requested
  the second one-hour observing block to be scheduled well after the
- first, so we could use it for spectroscopy instead of another image
+ first, so we might use it for spectroscopy instead of another image
  and thus get a first glimpse at the nature of the system.  While the
  resulting spectrum -- taken end of January -- is too noisy for
  classification (typical signal-to-noise of 10 per 1\,nm pixel), it
@@ -442,7 +442,7 @@
  classification.  Specifically, we aim for a final signal-to-noise
  ratio of 30, by integrating four times longer and using better
  conditions (and thus AO correction): 0.6 arcsec seeing (instead of
- 0.8), and clear sky (instead of thin clouds).  With this, we should
+ 0.8), and clear sky (instead of thin clouds - causing an absorption of 0.2 mag).  With this, we should
  be able to ascertain the nature of V445~Pup: Is the binary hydrogen
  or helium rich? How large and luminous is the companion? How large is
  the accretion disk? Did the system host a supersoft source?
@@ -1092,7 +1092,7 @@ also by Woudt et al. (2009)}
 %\INSconfig{}{NACO}{APP 27 mas/px VIS-WFS}{select Lp and/or NB_4.05}
 %
 %\INSconfig{}{NACO}{SPEC IR-WFS}{provide the list of spectroscopic modes HERE}
-\INSconfig{A}{NACO}{SPEC VIS-WFS}{provide the list of spectroscopic modes HERE}
+\INSconfig{A}{NACO}{SPEC VIS-WFS}{S54_3_SK}
 % % 
 %
 %-----------------------------------------------------------------------
