--- a/v445-puppis.tex
+++ b/v445-puppis.tex
@@ -481,7 +481,7 @@
 \WhyNights{%
  To measure the Hydrogen/Helium emission lines as well as stellar parameters we need a spectrum with a S/N$\approx30$. 
  
- Our previous observations used the acquisition template `NACO\_img\_acq\_MoveToSlit'  with 00:17:41.00 and 4 coadds with 634.75~s each filling an OB with exactly one hour (to obtain an ABBA pattern). Which leaves  4 integration times of 634.75 s to fill an hour. This resulted in a S/N=10 and we have ascertained (using the ETC) that with better conditions (0.6\arcsec seeing and CLR conditions) we obtain a $\textrm{S/N}\approx15$. We can therefore reach our target S/N=30 with 16 NDITs of 634.75s, resulting in a total of 4 OBS with 1 hour each when taking overheads into account. 
+ Our previous observations used the acquisition template `NACO\_img\_acq\_MoveToSlit'  with 00:17:41.00 and 4 coadds with 634.75~s each filling an OB with exactly one hour (to obtain an ABBA pattern). Which leaves  4 integration times of 634.75 s to fill an hour. This resulted in a S/N=10 and we have ascertained (using the ETC) that with better conditions (0.6\arcsec seeing and CLR conditions) we obtain a $\textrm{S/N}\approx15$. We can therefore reach our target S/N=30 with 16 NDITs of 634.75s, resulting in a total of 4 OBs with 1 hour each when taking overheads into account. 
 
 }
 
